--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "dotenv": "^4.0.0",
     "eslint": "^3.7.1",
     "mocha": "^3.1.0",
     "morgan": "^1.7.0"
