--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "moment": "^2.15.1",
     "mongoose": "^4.6.3",
     "request": "^2.78.0",
-    "request-promise-native": "^1.0.3"
+    "request-promise-native": "^1.0.3",
+    "sendgrid": "^5.2.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
