--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "author": "Aaron Bini",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.1",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "moment": "^2.15.1",
     "mongoose": "^4.6.3",
+    "nodemailer": "^4.4.2",
     "request": "^2.78.0",
     "request-promise-native": "^1.0.3",
     "sendgrid": "^5.2.3"
@@ -33,6 +34,6 @@
     "morgan": "^1.7.0"
   },
   "engines": {
-    "node": "6.3.0"
+    "node": "8.9.4"
   }
 }
